# services/api/oas/oas_operations_gen.go
@@ -10,11 +10,11 @@ const (
 	GetMyCatalogsOperation       OperationName = "GetMyCatalogs"
 	GetMyPackageOperation        OperationName = "GetMyPackage"
 	GetPackageSchemaOperation    OperationName = "GetPackageSchema"
+	GetProjectQuotaOperation     OperationName = "GetProjectQuota"
 	GetServiceOperation          OperationName = "GetService"
 	InstallServiceOperation      OperationName = "InstallService"
 	ListServicesOperation        OperationName = "ListServices"
 	SetServiceSharedOperation    OperationName = "SetServiceShared"
 	SetServiceSuspendedOperation OperationName = "SetServiceSuspended"
-	WatchReleaseOperation        OperationName = "WatchRelease"
-	WatchResourcesOperation      OperationName = "WatchResources"
+	WatchServiceEventsOperation  OperationName = "WatchServiceEvents"
 )
